--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ footer .row {
 
 footer a {
     color: white;
+    transition: all 1s;
 }
 
 footer p {
@@ -132,10 +133,13 @@ footer p {
     font-size: 0.7rem;
 }
 
-.pago img {
+.mpago {
     width: 8.5rem;
+    transition: all 1s;
 }
-
+.mpago:hover {
+    filter: invert(48%) sepia(90%) saturate(3207%); 
+}
 .envio {
     display: flex;
     flex-flow: column;
@@ -149,8 +153,8 @@ footer .bi {
     transition: all 1s;
 }
 
-.bi:hover,
-a:hover {
+.bi:hover, .redes
+a:hover, .envio a:hover {
     color: orange;
 }
 
@@ -223,7 +227,7 @@ a:hover {
 body {
     max-width: 1400px;
     margin: 0 auto;
-    animation: bgfade 333ms
+    animation: bgfade 0.5s
 }
 
 @keyframes bgfade {
@@ -363,15 +367,16 @@ main {
     width: 100%;
     padding: 2rem;
     grid-template-columns: auto auto auto;
-    gap: 2rem;
+    gap: 0.5rem;
     text-align: center;
     justify-content: center;
 }
 
 .container_gal img {
-    max-width: 100%;
+    max-width: 75%;
     border: 2px rgb(255, 145, 0) solid;
     border-radius: 4px;
+    transition: all 1s;
 }
 
 .container_gal img:hover {
@@ -486,9 +491,17 @@ td {
 .datos p, .datos a {
     color: rgb(255, 145, 3);
     font-size: 1.3rem;
+    transition: all 1s;
 }
 .bi-whatsapp{
     color: green;
+    transition: all 1s;
+}
+.datos a:hover{
+    color: rgb(0, 24, 92);
+}
+.bi-whatsapp:hover {
+    color: greenyellow;
 }
 .ubicacion {
     padding-top: 1rem;
