--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ li {
     color: white;
     text-transform: uppercase;
     z-index: 100;
+    
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -87,6 +88,7 @@ li {
 
 .dropdown-menu {
     background-image: url(../img/background-nav.png);
+    transition: all 1s;
 }
 
 .dropdown-item {
@@ -134,7 +136,7 @@ footer p {
 }
 
 .mpago {
-    width: 8.5rem;
+    width: 8rem;
     transition: all 1s;
 }
 .mpago:hover {
@@ -147,7 +149,7 @@ footer p {
 }
 
 footer .bi {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
     margin: 0.25rem;
     color: white;
     transition: all 1s;
@@ -168,18 +170,16 @@ a:hover, .envio a:hover {
     text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
-@media (min-width: 577px) and (max-width: 811px) {
+@media (min-width: 577px) and (max-width: 820px) {
     html {
         font-size: 80%;
     }
 
     body {
-        overflow: hidden;
+        overflow-x: hidden;
     }
-
-    .footer {
-        margin: 1, 5rem auto;
-
+    .footer .container .row {
+        padding: 0;
     }
 }
 
@@ -189,7 +189,7 @@ a:hover, .envio a:hover {
     }
 
     .container {
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
     footer {
@@ -507,6 +507,7 @@ td {
     padding-top: 1rem;
     padding-bottom: 1rem;
     width: 300px;
+    overflow: hidden;
 }
 
 .gmap_canvas {
@@ -595,7 +596,14 @@ label {
     font-size: 14px;
     color: black;
 }
-
+@media (min-width: 577px) and (max-width: 820px) {
+    .datos {
+        width: 30rem;
+    }
+    .mpago {
+        width: 70%;
+    }
+}
 @media screen and (max-width: 576px) {
     .datos {
         width: auto;
