--- a/sass/_galerias.scss
+++ b/sass/_galerias.scss
@@ -1,4 +1,5 @@
-/* -------------------------Galerias------------------------ */
+/* ------------------------- Galerias ------------------------ */
+
 .galeria h2 {
   color: $colorTxSecundario;
   margin-left: 2rem;
