--- a/sass/_navBar.scss
+++ b/sass/_navBar.scss
@@ -1,4 +1,5 @@
-/* -------------------------Barra de Navegación------------------------- */
+/* ------------------------- Barra de Navegación ------------------------- */
+
 .navbar> {
 
   .container,
