--- a/sass/_tablas.scss
+++ b/sass/_tablas.scss
@@ -1,4 +1,5 @@
-/* ------------------------Tabla de Talles------------------------ */
+/* ------------------------ Tabla de Talles ------------------------ */
+
 table {
   margin: 6rem auto;
   padding: 1rem;
