--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,4 +1,5 @@
 //vars
+
 //Colores
 $colorTxPrincipal: rgb(255, 145, 3);
 $colorTxSecundario: rgb(255, 255, 255);
@@ -7,19 +8,22 @@ $colorTxAzul: rgb(0, 24, 92);
 $colorFondQS: rgb(255, 245, 238);
 $colorTab: rgb(255, 91, 51);
 $colorPres: rgb(219, 206, 182);
-$colorWA: rgb(0, 128, 0);
+$colorWA: rgb(0, 230, 118);
 $colorWAH: rgb(0, 255, 0);
+$colorFace:rgb(56, 88, 152);
+$colorIG: rgb(179, 0, 165);
+$colorTW: rgb(29, 155, 240);
 $colorContacto: rgb(233, 233, 233);
 $colorTxForm: rgb(0, 0, 0);
 $colorBorProc: rgb(192, 192, 192);
-$colorSombra: 2px 0 0 #000,
--2px 0 0 #000,
-0 2px 0 #000,
-0 -2px 0 #000,
-1px 1px #000,
--1px -1px 0 #000,
-1px -1px 0 #000,
--1px 1px 0 #000;
+$colorSombra: 2px 0 0 rgb(0, 0, 0),
+-2px 0 0 rgb(0, 0, 0),
+0 2px 0 rgb(0, 0, 0),
+0 -2px 0 rgb(0, 0, 0),
+1px 1px rgb(0, 0, 0),
+-1px -1px 0 rgb(0, 0, 0),
+1px -1px 0 rgb(0, 0, 0),
+-1px 1px 0 rgb(0, 0, 0);
 $colornaranjadeg1: rgb(255, 166, 0);
 $colornaranjadeg2: rgba(255, 166, 0, 0.75);
 $colornaranjadeg3: rgba(255, 166, 0, 0.5);
@@ -30,6 +34,7 @@ $backgroundPrincipal: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/20
 $backgroundChecked: radial-gradient(rgb(255, 145, 0) 0%, rgb(255, 145, 0) 40%, transparent 50%, transparent);
 
 //Media Queries
+$mobilexs: 360px;
 $mobile: 576px;
 $tablet: 820px;
 $desktop: 1400px;
