--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,39 @@
   }
 }
 
+/* ------------------------ Maps ------------------------  */
+.bi-twitter:hover {
+  color: #1d9bf0;
+}
+
+.twitter:hover {
+  color: #1d9bf0;
+}
+
+.bi-facebook:hover {
+  color: #385898;
+}
+
+.facebook:hover {
+  color: #385898;
+}
+
+.bi-instagram:hover {
+  color: #b300a5;
+}
+
+.instagram:hover {
+  color: #b300a5;
+}
+
+.bi-whatsapp:hover {
+  color: lime;
+}
+
+.whatsapp:hover {
+  color: lime;
+}
+
 /* ------------------------Compartidos------------------------ */
 * {
   margin: 0;
@@ -105,7 +138,7 @@ main {
   display: none;
 }
 
-/* -------------------------Barra de Navegación------------------------- */
+/* ------------------------- Barra de Navegación ------------------------- */
 .navbar > .container,
 .navbar > .container-fluid,
 .navbar > .container-lg,
@@ -171,7 +204,7 @@ main {
           animation: menu-resaltado 1000ms linear 3ms infinite;
 }
 
-/* ------------------------ Pie de Página------------------------  */
+/* ------------------------ Pie de Página ------------------------  */
 footer {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23021438'/%3E%3Cstop offset='1' stop-color='%23010D25'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%2302112f'/%3E%3Cstop offset='1' stop-color='%23010D25'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg transform='translate(900 0)'%3E%3Cg transform='translate(0 1500)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(-122.4 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.49' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
@@ -250,22 +283,25 @@ footer .bi {
   transition: all 1s;
 }
 
-.bi:hover,
-.redes a:hover,
 .envio a:hover {
   color: #ff9103;
 }
 
 .copyRigth {
+  font-size: 1.2rem;
+  font-weight: 100;
   text-align: center;
+  text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 }
 
 .copyRigth p {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: white;
-  font-size: 1rem;
-  text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+  font-size: 0.9rem;
+  text-transform: capitalize;
 }
 
+/* ------------------------ Index ------------------------  */
 .intro {
   margin-top: 2rem;
   color: white;
@@ -274,7 +310,11 @@ footer .bi {
 
 .carousel-caption h5 {
   text-transform: uppercase;
-  text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+  text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
+}
+
+.intro {
+  max-width: 80%;
 }
 
 .proceso {
@@ -299,7 +339,7 @@ footer .bi {
   text-shadow: 2px 3px 0 #00185c;
 }
 
-/* ------------------------Quienes Somos------------------------ */
+/* ------------------------ ¿Quienes Somos? ------------------------ */
 .quienes {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -318,18 +358,17 @@ footer .bi {
   color: #00185c;
   background: seashell;
   border: 2px #00185c solid;
-  padding: 25px 10px 10px 10px;
+  padding: 25px 10px;
   text-align: justify;
 }
 
 #taller {
   height: 480px;
   width: 816px;
-  border: 2px #00185c solid;
   overflow: hidden;
 }
 
-/* -------------------------Galerias------------------------ */
+/* ------------------------- Galerias ------------------------ */
 .galeria h2 {
   color: white;
   margin-left: 2rem;
@@ -373,7 +412,7 @@ footer .bi {
   width: 100%;
 }
 
-/* ------------------------Tabla de Talles------------------------ */
+/* ------------------------ Tabla de Talles ------------------------ */
 table {
   margin: 6rem auto;
   padding: 1rem;
@@ -397,14 +436,14 @@ td {
   border: 0.1rem white dashed;
 }
 
-/* ------------------------Presupuesto------------------------ */
+/* ------------------------ Presupuesto ------------------------ */
 .presupuesto {
   width: 30rem;
   height: auto;
   margin: 1rem 2rem;
   border-radius: 10px;
-  padding: 1rem;
-  background-color: #dbceb6;
+  padding: 2rem;
+  background: #dbceb6;
 }
 
 .club > input[type="radio"] {
@@ -433,14 +472,71 @@ td {
   border-color: #ff9103;
 }
 
-/* ------------------------Contacto------------------------ */
+.btn_attach {
+  display: inline-block;
+  width: 25rem;
+  height: 3rem;
+  margin: 0.5rem;
+  color: #00185c;
+  background: #ff9103;
+  border-radius: 10px;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  -webkit-transition: all 333ms;
+  transition: all 333ms;
+}
+
+.btn_attach:active {
+  border: #00185c 0.2rem solid;
+}
+
+.btn_send {
+  display: inline-block;
+  width: 25rem;
+  height: 3rem;
+  margin: 0.5rem;
+  color: white;
+  background: #00185c;
+  border-radius: 10px;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  -webkit-transition: all 333ms;
+  transition: all 333ms;
+}
+
+.btn_send:active {
+  border: white 0.2rem solid;
+}
+
+.btn_del {
+  display: inline-block;
+  width: 25rem;
+  height: 3rem;
+  margin: 0.5rem;
+  color: white;
+  background: #ff5b33;
+  border-radius: 10px;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  -webkit-transition: all 333ms;
+  transition: all 333ms;
+}
+
+.btn_del:active {
+  border: white 0.2rem solid;
+}
+
+/* ------------------------ Contacto ------------------------ */
 .datos {
   width: 27rem;
   height: 100%;
   margin: 1rem 2rem;
   border-radius: 1rem;
   padding: 1rem;
-  background-color: #e9e9e9;
+  background: #e9e9e9;
 }
 
 .datos h2 {
@@ -476,13 +572,13 @@ td {
 }
 
 .bi-whatsapp {
-  color: green;
+  color: lime;
   -webkit-transition: all 1s;
   transition: all 1s;
 }
 
 .bi-whatsapp:hover {
-  color: lime;
+  color: #00e676;
 }
 
 .ubicacion {
@@ -537,24 +633,6 @@ label {
   display: block;
 }
 
-.boton_form {
-  width: 25rem;
-  height: 3rem;
-  margin: 0.5rem;
-  background-color: #ff9103;
-  border-radius: 10px;
-  text-transform: uppercase;
-  text-align: center;
-  cursor: pointer;
-}
-
-.boton_form:hover {
-  -webkit-animation: menu-resaltado 1000ms linear 3ms infinite;
-          animation: menu-resaltado 1000ms linear 3ms infinite;
-  border: #00185c 0.2rem solid;
-  padding-top: .5rem;
-}
-
 .aviso {
   font-size: 1rem;
   color: #00185c;
@@ -578,6 +656,26 @@ label {
   color: black;
 }
 
+.btn_send2 {
+  display: inline-block;
+  width: 25rem;
+  height: 3rem;
+  margin: 0.5rem;
+  color: white;
+  background: #ff9103;
+  border-radius: 10px;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  -webkit-transition: all 333ms;
+  transition: all 333ms;
+}
+
+.btn_send2:active {
+  border: white 0.2rem solid;
+}
+
+/* ------------------------ Media Queries ------------------------  */
 @media (min-width: 576px) and (max-width: 820px) {
   html {
     font-size: 80%;
@@ -650,9 +748,10 @@ label {
   }
   .quienesTexto {
     margin: 0px;
-    max-height: 330px;
+    max-height: 280px;
   }
   #taller {
+    margin-top: 1rem;
     width: 100%;
     height: 100%;
   }
@@ -665,6 +764,18 @@ label {
   }
   .container_gal img {
     max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .presupuesto {
+    padding: 0.5rem;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 820px) {
+  .presupuesto {
+    padding: 1.5rem;
   }
 }
 
