--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 @charset "UTF-8";
+/* fuentes */
+@import url("https://fonts.googleapis.com/css2?family=Kanit&display=swap");
+/* fuente general */
+@import url("https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap");
+/* fuente títulos */
+@import url("https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap");
+/* fuente intro */
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@1,700&display=swap");
+/* fuente quienes somos */
 @-webkit-keyframes bgfade {
   0% {
     opacity: 0;
@@ -108,6 +117,7 @@ body {
   margin: 0 auto;
   -webkit-animation: bgfade 0.5s;
           animation: bgfade 0.5s;
+  font-family: 'Kanit', sans-serif;
 }
 
 main {
@@ -125,6 +135,10 @@ main {
 .titulo {
   font-size: 1.5rem;
   text-align: center;
+}
+
+.titulo h1 {
+  font-family: 'Bree Serif', serif;
   color: #ff9103;
   text-transform: uppercase;
 }
@@ -314,7 +328,11 @@ footer .bi {
 }
 
 .intro {
-  max-width: 80%;
+  max-width: 94%;
+}
+
+.intro p {
+  font-family: 'Signika Negative', sans-serif;
 }
 
 .proceso {
@@ -354,12 +372,16 @@ footer .bi {
   margin: 0;
   height: 480px;
   width: 400px;
-  font-size: 1.3rem;
-  color: #00185c;
+  padding: 3rem 1rem;
   background: seashell;
   border: 2px #00185c solid;
-  padding: 25px 10px;
+}
+
+.quienesTexto p {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 1.4rem;
   text-align: justify;
+  color: #00185c;
 }
 
 #taller {
@@ -446,6 +468,11 @@ td {
   background: #dbceb6;
 }
 
+.presupuesto h3 {
+  font-size: 1.6rem;
+  padding-bottom: 1rem;
+}
+
 .club > input[type="radio"] {
   display: none;
 }
@@ -489,6 +516,18 @@ td {
 
 .btn_attach:active {
   border: #00185c 0.2rem solid;
+}
+
+.btn_attach input[type="file"] {
+  opacity: 0;
+  height: 35px;
+  width: 100%;
+}
+
+.btn_attach span {
+  position: relative;
+  top: -3.5rem;
+  z-index: 0;
 }
 
 .btn_send {
@@ -555,7 +594,7 @@ td {
 
 .datos p {
   color: #ff9103;
-  font-size: 1.3rem;
+  font-size: 1.0rem;
   -webkit-transition: all 1s;
   transition: all 1s;
 }
@@ -695,22 +734,14 @@ label {
   .container {
     overflow-x: hidden;
   }
-  footer {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row;
-            flex-flow: row;
-  }
   .footer .bi {
-    margin: 1rem;
+    margin: 2rem;
   }
   .bi-link,
   .pago,
   .envio,
   .telefono {
-    visibility: hidden;
-    width: 0px;
-    height: 0px;
+    display: none;
   }
   .redes {
     font-size: 0;
@@ -722,10 +753,7 @@ label {
     height: auto;
   }
   .redes p {
-    visibility: hidden;
-    width: 0px;
-    height: 0px;
-    font-size: 0;
+    display: none;
   }
 }
 
@@ -737,7 +765,7 @@ label {
 
 @media screen and (max-width: 576px) {
   #btn-back-to-top {
-    right: 2rem;
+    right: 1rem;
   }
 }
 
@@ -776,6 +804,9 @@ label {
 @media (min-width: 361px) and (max-width: 820px) {
   .presupuesto {
     padding: 1.5rem;
+  }
+  .presupuesto .btn_attach span {
+    top: -4.5rem;
   }
 }
 
