--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,7 +18,8 @@ li {
 body {
     max-width: $desktop;
     margin: 0 auto;
-    animation: bgfade 0.5s
+    animation: bgfade 0.5s;
+    font-family: 'Kanit', sans-serif;
 }
 
 main {
@@ -34,8 +35,11 @@ main {
 .titulo {
     font-size: 1.5rem;
     text-align: center;
-    color: $colorTxPrincipal;
-    text-transform: uppercase;
+    h1 {
+        font-family: 'Bree Serif', serif;
+        color: $colorTxPrincipal;
+        text-transform: uppercase;
+    }
 }
 
 #btn-back-to-top {
