--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -16,14 +16,15 @@ li {
 }
 
 body {
-    max-width: $desktop;
+    background-image: $backgroundPrincipal;
     margin: 0 auto;
     animation: bgfade 0.5s;
     font-family: 'Kanit', sans-serif;
 }
 
 main {
-    background-image: $backgroundPrincipal;
+    max-width: $desktop;
+    margin: 0 auto;
     padding: 10px;
 }
 
