--- a/sass/_quienes.scss
+++ b/sass/_quienes.scss
@@ -1,6 +1,7 @@
 /* ------------------------ ¿Quienes Somos? ------------------------ */
 
 .quienes {
+  margin: 2rem;
   display: flex;
   flex-flow: row wrap;
 }
