--- a/css/style.css
+++ b/css/style.css
@@ -437,7 +437,7 @@ footer .bi {
 
 /* ------------------------ ¿Quienes Somos? ------------------------ */
 .quienes {
-  margin: 2rem;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -445,28 +445,30 @@ footer .bi {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .quienesTexto {
-  margin: 0;
-  height: 480px;
-  width: 400px;
-  padding: 3rem 1rem;
+  margin: 0 1rem;
+  width: 320px;
+  height: 100%;
+  padding: 2.8rem 1rem;
   background: seashell;
   border: 2px #00185c solid;
 }
 
 .quienesTexto p {
+  width: 100%;
   font-family: 'PT Sans', sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   text-align: justify;
   color: #00185c;
 }
 
-#taller {
-  height: 480px;
-  width: 816px;
-  overflow: hidden;
+#taller img {
+  width: 100%;
 }
 
 /* ------------------------- Galerias ------------------------ */
@@ -649,7 +651,7 @@ td {
 
 /* ------------------------ Contacto ------------------------ */
 .datos {
-  width: 27rem;
+  width: 30rem;
   height: 100%;
   margin: 1rem 2rem;
   border-radius: 1rem;
@@ -702,11 +704,11 @@ td {
 .ubicacion {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  width: 400px;
+  width: 100%;
   overflow: hidden;
 }
 
-.gmap_canvas {
+#gmap_canvas {
   padding-top: 1rem;
 }
 
@@ -718,42 +720,6 @@ td {
   padding: 20px 20px 20px 20px;
   background-color: #e9e9e9;
   padding-left: 30px;
-}
-
-input {
-  background-color: white;
-  width: 25rem;
-  height: 3.5rem;
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #ff9103;
-  margin-top: 10px;
-  padding-left: 10px;
-  margin-bottom: 20px;
-}
-
-textarea {
-  background-color: white;
-  width: 25rem;
-  height: 15rem;
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #ff9103;
-  margin-top: 10px;
-  padding-left: 10px;
-  margin-bottom: 20px;
-  padding-top: 15px;
-}
-
-label {
-  display: block;
-}
-
-.aviso {
-  font-size: 1rem;
-  color: #00185c;
 }
 
 .contacto h2 {
@@ -772,6 +738,35 @@ label {
 .contacto p {
   font-size: 14px;
   color: black;
+}
+
+input {
+  background-color: white;
+  width: 25rem;
+  height: 3.5rem;
+  margin: 10px 0 20px 0;
+  padding-left: 10px;
+  border-radius: 5px;
+  border: #ff9103 1px solid;
+}
+
+textarea {
+  background-color: white;
+  width: 25rem;
+  height: 15rem;
+  border: #ff9103 1px solid;
+  border-radius: 5px;
+  margin: 10px 0 20px 0;
+  padding: 15px 0 0 10px;
+}
+
+label {
+  display: block;
+}
+
+.aviso {
+  font-size: 1rem;
+  color: #00185c;
 }
 
 .btn_send2 {
@@ -794,6 +789,12 @@ label {
 }
 
 /* ------------------------ Media Queries ------------------------  */
+@media screen and (max-width: 576px) {
+  .logo {
+    max-width: 50%;
+  }
+}
+
 @media (min-width: 576px) and (max-width: 820px) {
   html {
     font-size: 80%;
@@ -849,18 +850,27 @@ label {
 }
 
 @media screen and (max-width: 576px) {
-  .quienes {
-    max-width: 340px;
-    margin: auto;
-  }
   .quienesTexto {
-    margin: 0px;
-    max-height: 320px;
+    width: 100%;
+    margin: 0;
+    padding: 1.5rem;
   }
   #taller {
     margin-top: 1rem;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 1190px) {
+  .quienes {
+    width: 780px;
+    margin: 0 auto;
+  }
+  .quienesTexto {
+    margin: 0;
     width: 100%;
-    height: 100%;
+  }
+  #taller {
+    margin-top: 2rem;
   }
 }
 
@@ -878,7 +888,18 @@ label {
   .presupuesto {
     padding: 0.5rem;
   }
-  .btn_attach span {
+  .presupuesto input {
+    width: 100%;
+  }
+  .presupuesto .btn_attach,
+  .presupuesto .btn_send,
+  .presupuesto .btn_del {
+    width: 100%;
+    margin: 1rem 0;
+  }
+  .presupuesto .btn_attach span,
+  .presupuesto .btn_send span,
+  .presupuesto .btn_del span {
     top: -4.6rem;
   }
 }
@@ -892,26 +913,33 @@ label {
   }
 }
 
-@media (min-width: 576px) and (max-width: 820px) {
+/* @media (min-width: $mobile) and (max-width: $tablet) {
   .datos {
     width: 30rem;
   }
 }
-
+ */
 @media screen and (max-width: 576px) {
   .datos {
-    width: auto;
+    width: 30.5rem;
   }
   .ubicacion {
+    width: auto;
     padding-top: 20px;
     padding-bottom: 10px;
-    width: auto;
     overflow: hidden;
   }
   .contacto {
     width: auto;
     margin: 1rem;
     padding: 1rem;
+  }
+  .contacto input, .contacto textarea {
+    max-width: 100%;
+  }
+  .contacto .btn_send2 {
+    width: 100%;
+    margin: 1rem 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
