--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -1,7 +1,7 @@
 /* ------------------------ Contacto ------------------------ */
 
 .datos {
-  width: 27rem;
+  width: 30rem;
   height: 100%;
   margin: 1rem 2rem;
   border-radius: 1rem;
@@ -51,11 +51,11 @@
 .ubicacion {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  width: 400px;
+  width: 100%;
   overflow: hidden;
 }
 
-.gmap_canvas {
+#gmap_canvas {
   padding-top: 1rem;
 }
 
@@ -67,45 +67,6 @@
   padding: 20px 20px 20px 20px;
   background-color: $colorContacto;
   padding-left: 30px;
-}
-
-input {
-  background-color: $colorTxSecundario;
-  width: 25rem;
-  height: 3.5rem;
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: $colorTxPrincipal;
-  margin-top: 10px;
-  padding-left: 10px;
-  margin-bottom: 20px;
-}
-
-textarea {
-  background-color: $colorTxSecundario;
-  width: 25rem;
-  height: 15rem;
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: $colorTxPrincipal;
-  margin-top: 10px;
-  padding-left: 10px;
-  margin-bottom: 20px;
-  padding-top: 15px;
-}
-
-label {
-  display: block;
-}
-
-.aviso {
-  font-size: 1rem;
-  color: $colorTxAzul;
-}
-
-.contacto {
   h2 {
     font-size: 32px;
     text-align: left;
@@ -124,6 +85,36 @@ label {
     color: $colorTxForm;
   }
 }
+
+input {
+  background-color: $colorTxSecundario;
+  width: 25rem;
+  height: 3.5rem;
+  margin: 10px 0 20px 0;
+  padding-left: 10px;
+  border-radius: 5px ;
+  border: $colorTxPrincipal 1px solid;
+}
+
+textarea {
+  background-color: $colorTxSecundario;
+  width: 25rem;
+  height: 15rem;
+  border: $colorTxPrincipal 1px solid;
+  border-radius: 5px;
+  margin: 10px 0 20px 0;
+  padding: 15px 0 0 10px;
+}
+
+label {
+  display: block;
+}
+
+.aviso {
+  font-size: 1rem;
+  color: $colorTxAzul;
+}
+
 .btn_send2 {
   @include btn($colorTxSecundario, $colorTxPrincipal)
 }
