--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Kanit', sans-serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border: 0;
@@ -492,47 +491,66 @@ footer .bi {
 }
 
 /* ------------------------- Galerias ------------------------ */
-.galeria h2 {
-  color: white;
-  margin-left: 2rem;
+/* .galeria h2 {
+  position: relative;
+  right: 0;
+  color: $colorTxSecundario;
+  margin-left: 0 auto;
   text-align: left;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+} */
+.galeria {
+  margin: 2rem 0;
 }
 
-.container_gal {
+.galeria h2 {
+  text-align: center;
+  color: white;
+}
+
+.galeria .container__galeria {
   display: -ms-grid;
   display: grid;
   width: 100%;
   padding: 2rem;
   -ms-grid-columns: auto auto auto;
       grid-template-columns: auto auto auto;
-  gap: 0.5rem;
+  gap: 1rem 2rem;
   text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
-.container_gal img {
-  max-width: 75%;
-  border: 2px #ff9103 solid;
-  border-radius: 4px;
+.galeria .container__galeria .camiseta {
+  background: rgba(255, 255, 255, 0.74);
+  border: 0.14rem #ff9103 solid;
+  border-radius: 1rem;
+  max-width: 300px;
+}
+
+.galeria .container__galeria .camiseta img {
+  max-width: 100%;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
   -webkit-transition: all 500ms;
   transition: all 500ms;
 }
 
-.container_gal img:hover {
-  -webkit-filter: saturate(2);
-          filter: saturate(2);
-}
-
-.desc {
-  color: white;
+.galeria .container__galeria .camiseta__desc {
+  font-family: 'Bree Serif', serif;
+  font-weight: 600;
+  padding: 0.5rem;
+  color: #00185c;
   text-align: center;
   text-transform: uppercase;
   width: 100%;
+}
+
+.galeria .container__galeria .camiseta:hover {
+  -webkit-filter: saturate(2);
+          filter: saturate(2);
+  -webkit-box-shadow: rgba(255, 255, 255, 0.4) 0px 2px 4px, rgba(255, 255, 255, 0.3) 0px 7px 13px -3px, rgba(255, 255, 255, 0.2) 0px -3px 0px inset;
+          box-shadow: rgba(255, 255, 255, 0.4) 0px 2px 4px, rgba(255, 255, 255, 0.3) 0px 7px 13px -3px, rgba(255, 255, 255, 0.2) 0px -3px 0px inset;
 }
 
 /* ------------------------ Tabla de Talles ------------------------ */
@@ -895,11 +913,11 @@ label {
 }
 
 @media screen and (max-width: 576px) {
-  .container_gal {
+  .container__galeria {
     -ms-grid-columns: auto auto;
         grid-template-columns: auto auto;
   }
-  .container_gal img {
+  .container__galeria img {
     max-width: 100%;
   }
 }
