--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -57,6 +57,7 @@ main {
     display: flex;
    justify-content: center;
    padding: 2rem;
+   margin: 0 auto;
   img {
         width: 100%;
     }
