--- a/sass/_quienes.scss
+++ b/sass/_quienes.scss
@@ -5,26 +5,27 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-}
 
-.quienesTexto {
-  margin: 0 1rem;
-  width: 320px;
-  height: 100%;
-  padding: 2.8rem 1rem;
-  background: map-get($map: $colores_fondo , $key: quienes);
-  border: 2px $colorTxAzul solid;
-  p {
-    width: 100%;
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.2rem;
-    text-align: justify;
-    color: $colorTxAzul;
+  &__texto {
+    margin: 0 1rem;
+    width: 320px;
+    height: 100%;
+    padding: 2.8rem 1rem;
+    background: map-get($map: $colores_fondo, $key: quienes);
+    border: 2px $colorTxAzul solid;
+
+    p {
+      width: 100%;
+      font-family: 'PT Sans', sans-serif;
+      font-size: 1.2rem;
+      text-align: justify;
+      color: $colorTxAzul;
+    }
   }
-}
 
-#taller {
-  img {
-    width: 100%;
+  #taller {
+    img {
+      width: 100%;
+    }
   }
 }
