--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -5,6 +5,7 @@ $colorTxPrincipal: rgb(255, 145, 3);
 $colorTxSecundario: rgb(255, 255, 255);
 $colorTxProceso: rgb(0, 255, 255);
 $colorTxAzul: rgb(0, 24, 92);
+$colorIntro: rgba(255, 255, 255, 0.2);
 $colorFondQS: rgb(255, 245, 238);
 $colorTab: rgb(255, 91, 51);
 $colorPres: rgb(219, 206, 182);
