--- a/sass/_presupuesto.scss
+++ b/sass/_presupuesto.scss
@@ -12,52 +12,64 @@
     font-size: 1.6rem;
     padding-bottom: 1rem;
   }
-}
 
-.club>input[type="radio"] {
-  display: none;
-
-  +*::before {
-    content: "";
-    display: inline-block;
-    vertical-align: bottom;
-    width: 1rem;
-    height: 1rem;
-    margin-right: 0.3rem;
-    border-radius: 50%;
-    border-style: solid;
-    border-width: 0.1rem;
-    border-color: $colorTxForm;
+  input {
+    @include formarea (1rem, 1.5rem)
   }
 
-  &:checked+* {
-    &::before {
-      background: $backgroundChecked;
-      border-color: $colorTxPrincipal;
+  label {
+    display: block;
+  }
+
+  .club>input[type="radio"] {
+    display: none;
+
+    +*::before {
+      content: "";
+      display: inline-block;
+      vertical-align: bottom;
+      width: 1rem;
+      height: 1rem;
+      margin-right: 0.3rem;
+      border-radius: 50%;
+      border-style: solid;
+      border-width: 0.1rem;
+      border-color: $colorTxForm;
     }
 
-    color: $colorTxPrincipal;
+    &:checked+* {
+      &::before {
+        background: $backgroundChecked;
+        border-color: $colorTxPrincipal;
+      }
+
+      color: $colorTxPrincipal;
+    }
   }
-}
 
-.btn_attach {
-  @include btn($colorTxAzul, $colorTxPrincipal);
-  input[type="file"] {
-    opacity: 0;
-    height: 35px;
-    width: 100%;
+  .btn_attach {
+    @include btn($colorTxAzul, $colorTxPrincipal);
+
+    input[type="file"] {
+      opacity: 0;
+      height: 35px;
+      width: 100%;
+    }
+
+    span {
+      position: relative;
+      top: -4.5rem;
+      z-index: 0;
+    }
+
+    ;
   }
-  span{
-  position:relative;
-	top: -3.5rem;
-  z-index: 0;  
-  };
-}
 
-.btn_send {
-  @include btn($colorTxSecundario, $colorTxAzul)
-}
+  .btn_send {
+    @include btn($colorTxSecundario, $colorTxAzul)
+  }
 
-.btn_del {
-  @include btn($colorTxSecundario, $colorTab)
+  .btn_del {
+    @include btn($colorTxSecundario, $colorTab)
+  }
 }
