arreglo mq quienes somos

--- a/css/style.css
+++ b/css/style.css
@@ -915,7 +915,7 @@ table tr td {
     width: 780px;
     margin: 0 auto;
   }
-  .quienes .quienesTexto {
+  .quienes__texto {
     margin: 0;
     width: 100%;
   }
